--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 
 ### STS ###
 .apt_generated
