--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,43 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# General
 .DS_Store
+Thumbs.db
+*.bak
+*.swp
+
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Maven / Java
+backend/target/
+!backend/src/main/**/target/
+!backend/src/test/**/target/
 
-### STS ###
+# Node.js dependencies
+frontend/node_modules/
+
+# Build output
+frontend/build/
+backend/build/
+
+# IDE files
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+
+# Miscellaneous
 .apt_generated
 .classpath
 .factorypath
@@ -39,21 +46,13 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+# Giữ thư mục backend/ và frontend/ trong Git
+!backend/
+!frontend/
